--- a/dwm2/alacritty/alacritty.toml
+++ b/dwm2/alacritty/alacritty.toml
@@ -11,7 +11,6 @@ import = ["/usr/share/archcraft/dwm/alacritty/colors.toml", "/usr/share/archcraf
 
 ## You can set shell.program to the path of your favorite shell, e.g. /bin/zsh.
 ## Entries in shell.args are passed as arguments to the shell.
-#shell = { program = "/bin/zsh", args = ["--login"] }
 
 ## Directory the shell is started in. When this is unset, or "None",
 ## the working directory of the parent process will be used.
@@ -25,6 +24,8 @@ ipc_socket = true
 
 ## ENVIRONMENT ----------------------------------------------------
 
+[terminal]
+shell = { program = "/bin/fish" }
 ## All key-value pairs in the [env] section will be added as environment variables for any process spawned
 ## by Alacritty, including its shell. Some entries may override variables set by alacritty itself.
 [env]
@@ -59,10 +60,10 @@ history = 10000
 multiplier = 3
 
 ## BELL -----------------------------------------------------------
-[bell]
-animation = "Linear"
-duration = 20
-command = { program = "paplay", args = ["/usr/share/sounds/freedesktop/stereo/dialog-error.oga"] }
+# [bell]
+# animation = "Linear"
+# duration = 20
+# command = { program = "paplay", args = ["/usr/share/sounds/freedesktop/stereo/dialog-error.oga"] }
 
 ## SELECTION ------------------------------------------------------
 [selection]
@@ -71,14 +72,12 @@ save_to_clipboard = true
 ## CURSOR ---------------------------------------------------------
 [cursor]
 vi_mode_style = "None"
-blink_interval = 750
-blink_timeout = 5
 unfocused_hollow = false
-thickness = 0.15
+thickness = 1
 
 [cursor.style]
-shape = "Block"
-blinking = "On"
+shape = "Beam"
+blinking = "Never"
 
 ## MOUSE ----------------------------------------------------------
 [mouse]
