--- a/dwm2/alacritty/colors.toml
+++ b/dwm2/alacritty/colors.toml
@@ -2,26 +2,50 @@
 ##
 ## Colors configuration -------------------------------------
 
+# [colors.primary]
+# background = "#1e222a"
+# foreground = "#c8ccd4"
+#
+# [colors.normal]
+# black   = "#1e222a"
+# red     = "#e06c75"
+# green   = "#98c379"
+# yellow  = "#e5c07b"
+# blue    = "#61afef"
+# magenta = "#c678dd"
+# cyan    = "#56b6c2"
+# white   = "#abb2bf"
+#
+# [colors.bright]
+# black   = "#545862"
+# red     = "#e06c75"
+# green   = "#98c379"
+# yellow  = "#e5c07b"
+# blue    = "#61afef"
+# magenta = "#c678dd"
+# cyan    = "#56b6c2"
+# white   = "#c8ccd4"
 [colors.primary]
-background = "#1e222a"
-foreground = "#c8ccd4"
+background = "#100f0f"
+foreground = "#dcdcdc"
 
 [colors.normal]
-black   = "#1e222a"
-red     = "#e06c75"
-green   = "#98c379"
-yellow  = "#e5c07b"
-blue    = "#61afef"
-magenta = "#c678dd"
-cyan    = "#56b6c2"
-white   = "#abb2bf"
+black = "#1e1e1e"
+red = "#d16969"
+green = "#608b4e"
+yellow = "#d7ba7d"
+blue = "#569cd6"
+magenta = "#c586c0"
+cyan = "#9cdcfe"
+white = "#d4d4d4"
 
 [colors.bright]
-black   = "#545862"
-red     = "#e06c75"
-green   = "#98c379"
-yellow  = "#e5c07b"
-blue    = "#61afef"
-magenta = "#c678dd"
-cyan    = "#56b6c2"
-white   = "#c8ccd4"
+black = "#2d2d2d"
+red = "#f44747"
+green = "#6a9955"
+yellow = "#e5c07b"
+blue = "#6796e6"
+magenta = "#d27e99"
+cyan = "#4ec9b0"
+white = "#ffffff"
+
